# pods-slave

./: .dockerignore  Cargo.toml  Dockerfile  docker-compose.yml  readme.md
.github/workflows/: build.yml
src/: config.rs  episode.rs  main.rs
src/services/: episode.rs  health.rs  hook.rs  mod.rs
